Fix with z-index

--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,7 @@ html, body {
 
 .hero {
     position: relative;
+    z-index: 1;
 
     display: grid;
     place-items: center;
